--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-aioprocessing
-aiosqlite3
-ConcurrentLogHandler
-tornado
+tornado>=6.0.3
+aioprocessing>=1.0.1
+aiosqlite3>=0.3.0
+psutil>=5.6.3
+#ConcurrentLogHandler
 requests
 ecdsa
 protobuf
-psutil
 pytest
 dnspython3
 ipwhois
