beta 0.99, Major refactoring

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 aioprocessing
 aiosqlite3
-ConcurrentLogHandler
-tornado
+# ConcurrentLogHandler
+polysign>=0.1.0
+tornado>=6.0.3
 requests
 ecdsa
 protobuf
